# primo

./: Makefile  README.md  pyproject.toml  setup.cfg
requirements/: dev.in  dev.txt  main.in
src/primo/: generate_primes.py  primo.py  standalone.py
tests/: test_primo.py
