[metadata]
name = primo
description = Investigating digit distributions in the primes
author = Adam Thornton
author_email = athornton@gmail.com
long_description = file: README.md LICENSE
url = https://github.com/athornton/primo
project_urls =
    Source code = https://github.com/athornton/primo
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Natural Language :: English
    Operating System :: POSIX
keywords =
    prime number-theory

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages=find:
python_requires = >=3.8
setup_requires =
    setuptools_scm
# Use requirements/main.in for runtime dependencies instead of install_requires

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    show_frequency = primo.standalone:main

[flake8]
max-line-length = 79
# E203: whitespace before :, flake8 disagrees with PEP-8
# W503: line break after binary operator, flake8 disagrees with PEP-8
ignore = E203, W503

[mypy]
disallow_untyped_defs = True
disallow_incomplete_defs = True
ignore_missing_imports = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_ignores = True
